Fixed 765: scrolling country list on iOS uses inertia scrolling now

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -171,6 +171,12 @@ $mobilePopupMargin: 30px !default;
     max-height: 200px;
     overflow-y: scroll;
 
+    // Fixes https://github.com/jackocnr/intl-tel-input/issues/765
+    // Apple still hasn't fixed the issue where setting overflow: scroll on a div element does not use inertia scrolling
+    // If this is not set, then the country list scroll stops moving after rasing a finger, and users report that scroll is slow
+    // Stackoverflow question about it: https://stackoverflow.com/questions/33601165/scrolling-slow-on-mobile-ios-when-using-overflowscroll
+    -webkit-overflow-scrolling: touch;
+
     // the divider below the preferred countries
     .divider {
       padding-bottom: 5px;
